Added last subsection
Added "Журналирование и резервное копирование"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1622,6 +1622,12 @@
 		urldate={2025-04-21}
 }
 
+@online{Mysqldoc7,
+    title={MySQL 8.0 Reference Manual. Chapter 7. Paragraph 4},
+    url={https://dev.mysql.com/doc/refman/8.0/en/server-logs.html},
+		urldate={2025-06-10}
+}
+
 @online{WashCoursesLec5,
     title={Lecture 5. Transactions},
     url={https://courses.cs.washington.edu/courses/csep544/10au/slides/lecture05-transactions-concurrency-control.pdf},
@@ -2433,4 +2439,10 @@
   volume={55},
   year={2000},
   doi={10.1007/BF02994709}
+}
+
+@online{mariaBackup,
+    title = {MariaDB Server Documentation. Backing Up and Restoring Databases},
+    url = {https://mariadb.com/kb/en/backing-up-and-restoring-databases/},
+    urldate = {2025-06-10}
 }
