--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -2028,34 +2028,143 @@ DDL-триггеры Oracle могут быть очень полезны для
 Что касается производительности, триггеры добавляют оверхед к операциям: каждая модификация данных может приводить к дополнительным действиям. Поэтому использовать триггеры нужно обдуманно. В учебных примерах (как в этом пособии) они отлично подходят для иллюстрации сложных правил поддержания данных. Но в промышленном коде избыточное использование триггеров может затруднить сопровождение и отладку, поскольку логика «разбрасывается» по базе данных и срабатывает неявно. Как отмечают \autocite{Silberschatz} и другие, триггеры могут приводить к непреднамеренным последствиям, если разработчики не знают о них или не ожидают побочных изменений данных. Поэтому рекомендуется документировать наличие важных триггеров и тщательно тестировать их на отсутствие логических циклов и взаимных влияний.
 В заключение, триггеры – механизм расширения функциональности СУБД, позволяющий реагировать на изменения данных автоматически. Они эффективны для задач, где нужно гарантированно применять бизнес-правило независимо от того, из какого приложения или под чьим запросом изменяются данные. Мы рассмотрели DML-триггеры, обеспечивающие целостность данных в таблицах (например, каскадное обновление связанных записей или аудит изменений), DDL-триггеры, помогающие контролировать изменения схемы и действия администраторов, \texttt{INSTEAD OF}-триггеры для пользовательских представлений, а также специальные системные триггеры для событий уровня базы данных. 
 
+\subsection{Журналирование и резервное копирование} 
 
+ Надёжная работа современных СУБД невозможна без механизмов журналирования транзакций и резервного копирования данных. Эти механизмы обеспечивают восстановление базы данных после сбоев и защиту от потери данных, гарантируя тем самым свойства атомарности и долговечности ACID \autocite{Silberschatz}. Ниже рассматриваются основы журналирования изменений и методов резервного копирования, а также их реализация в рассматриваемых нами СУБД: PostgreSQL, MySQL, Microsoft SQL Server и Oracle. 
+ 
+\subsubsection{Логирование изменений} 
 
+ Каждая СУБД ведёт специальный журнал транзакций, в который последовательно записываются все выполненные операции изменения данных \autocite{MicrosoftLearnSQLserverTransLog}. Журнал хранится на надёжном диске отдельно от основных данных и является ключевым компонентом системы: при сбое системы именно он позволяет привести базу данных к согласованному состоянию без потери подтверждённых транзакций \autocite{MicrosoftLearnSQLserverTransLog}. Запись действий в журнал происходит \textit{до} применения соответствующих изменений к самой базе данных. Такой подход называется журналом предзаписи (англ. \textit{Write-Ahead Logging}, WAL) и признан стандартным методом обеспечения целостности и устойчивости данных \autocite{PostgreSQLdocc28}. Основная идея WAL состоит в том, что перед тем как изменить страницу с данными на диске, СУБД сначала фиксирует информацию об этом изменении в журнале и сохраняет журнал на постоянном хранилище \autocite{PostgreSQLdocc28}. Только после успешной записи соответствующей журнальной записи операция считается надёжно зафиксированной, и изменения могут быть сброшены в основные файлы базы. Если придерживаться этого правила, отпадает необходимость немедленно записывать на диск каждую изменённую страницу данных при подтверждении транзакции, так как в случае сбоя система сможет восстановить недостающие изменения из журнала (так называемое восстановление с проигрыванием журнала, или операция \textit{REDO}) \autocite{PostgreSQLdocc28}. То есть протокол WAL позволяет достичь сразу двух целей: повысить надёжность транзакционной системы (за счёт сохранения всех действий на долговечном носителе) и увеличить производительность за счёт отложенной записи изменённых данных. Дисковые операции записи сводятся в основном к последовательной записи журнала, а сами страницы данных могут записываться реже (например, при фоновой синхронизации или контрольных точках). Практически одна операция синхронизации файла журнала (\texttt{fsync}) может подтвердить сразу множество небольших транзакций. Это существенно снижает количество случайных дисковых операций по сравнению с записью каждой страницы отдельно \autocite{PostgreSQLdocc28}. 
+ Журналирование изменений открывает несколько возможностей:
+ \begin{itemize}
+    \item Во-первых, оно позволяет откатывать транзакции (отмена незавершённых операций) и восстанавливать БД после сбоев без потери данных – эти процедуры рассмотрены далее. 
+    \item Во-вторых, журнал служит основой для резервного копирования с возможностью точечного восстановления: сохраняя копию базы и архивируя журнальные файлы, можно впоследствии восстановить состояние базы на любой момент времени, проиграв (прокрутив вперёд) журнальные записи изменений вплоть до нужной отметки \autocite{PostgreSQLdocc28}. 
+    \item В-третьих, механизм журналов используется для репликации и повышения отказоустойчивости: изменения, зафиксированные в журнале, могут передаваться на запасные серверы и применяться там, поддерживая актуальную копию базы данных \autocite{Mysqldoc7}. 
+ \end{itemize}
+ Следует также отметить, что файлы журнала чрезвычайно важны для системы. Их удаление или повреждение без надлежащих процедур чревато потерей данных и невозможностью корректного восстановления \autocite{MicrosoftLearnSQLserverTransLog}. Поэтому СУБД обычно не только сама управляет сохранением и очищением (транкацией) журнала, но и предоставляет средства резервирования журналов (например, архивирования) для целей восстановления.
 
+\subsubsection{Журналирование операций в различных СУБД} 
 
+ Концепция транзакционного журнала реализована во всех промышленных СУБД, хоть названия и различаются. Рассмотрим, как организовано журналирование в PostgreSQL, MySQL, SQL Server и Oracle. 
 
-\subsection{События (\textit{Coming soon})}
+ \paragraph{WAL в PostgreSQL} ~\\
 
-\textit{~Coming soon}
+ PostgreSQL использует протокол предзаписи WAL на уровне всего сервера. Все изменения базы записываются в журнальные файлы фиксированного размера (\textit{WAL segment}) в каталоге \texttt{pg\_wal/} (ранее \texttt{pg\_xlog/}). Запись в WAL происходит при каждом подтверждении транзакции: процесс-\texttt{logger} (\texttt{WAL Writer}) сбрасывает на диск буфер журнала, после чего транзакция считается зафиксированной. Благодаря этому при сбоях PostgreSQL может автоматически восстановить базу, проиграв журнальные записи всех транзакций, которые подтвердились, но чьи изменения не успели попасть в основное хранилище \autocite{PostgreSQLdocc28}. 
+ 
+ WAL в PostgreSQL содержит \textit{физические} описания изменений на уровне страниц/байтов базы данных. Например, если транзакция добавила строку в таблицу, в WAL записывается информация о внесении определённых байтов на определённую страницу таблицы. При рестарте после сбоя сервер читает журнал и применяет все такие изменения ко всем страницам, доводя базу до актуального состояния (это операция \textit{REDO}). Кроме того, в WAL пишутся специальные записи для обозначения начала и конца транзакций, что позволяет при необходимости отменить (откатить) незавершённые транзакции. 
+ 
+ PostgreSQL поддерживает механизмы архивирования WAL: администратор может включить режим архивации (\texttt{archive\_mode=on}) и задать команду архивирования (\texttt{archive\_command}), по которой сервер будет копировать каждый заполненный WAL-файл в стороннее хранилище (например, на другой диск или в облако). Архивирование WAL, в сочетании с регулярным резервным копированием, позволяет реализовать восстановление базы данных на любой момент времени (PITR): достаточно взять базовую резервную копию данных и прокрутить вперёд накопленные WAL-журналы до требуемого времени \autocite{PostgreSQLdocc28}. 
+ 
+ Например, утилита \texttt{pg\_basebackup} позволяет создать «снимок» базы, не останавливая сервер; а для восстановления достаточно поместить архивные WAL-файлы в каталог \texttt{pg\_wal} и указать в конфигурации точку во времени для отката (\texttt{recovery\_target\_time}). PostgreSQL применит журнальные записи и восстановит состояние базы на указанный момент. 
+ 
+ Механизм WAL также применяется для репликации: в режиме потоковой репликации (\textit{streaming replication}) основной сервер (\textit{primary}) транслирует свой WAL в реальном времени на один или несколько резервных узлов (\textit{standby}), которые постоянно повторяют полученные изменения у себя. Таким образом достигается почти синхронное дублирование данных на случай сбоя основного сервера.
 
+ \paragraph{Бинарный лог в MySQL} ~\\
+ 
+ В MySQL журнальный механизм представлен \textit{бинарным журналом} (binary log, \textbf{binlog}). Бинарный журнал содержит последовательность \textit{событий}, описывающих изменения в базе данных. В него записываются все SQL-команды, приводящие к модификации данных (например \texttt{CREATE TABLE}, \texttt{INSERT}, \texttt{UPDATE} и т.д.), а также информация о времени выполнения этих команд \autocite{Mysqldoc7}. Команды, не изменяющие данные (например, \texttt{SELECT}), в бинарный лог не попадают.
+ 
+ MySQL поддерживает два основных формата ведения binlog: \textit{пооператорный} (statement-based, когда логируются сами SQL-выражения) и \textit{построчный} (row-based, когда в журнал записываются непосредственно изменённые строки). Независимо от формата, бинарный лог выполняет две функции. \textbf{Первая функция} — это репликация: binlog на основном сервере (\textit{master}) служит источником данных для реплик. Специальный поток (\textit{replication thread}) читает журнал и отправляет записанные в нём события на серверы-реплики, которые применяют эти события и тем самым воспроизводят все транзакции, произошедшие на основном сервере \autocite{Mysqldoc7}. \textbf{Вторая функция} — это восстановление данных после сбоев и ошибок пользователя. Если у администратора имеется резервная копия базы данных (например, дамп или образ файлов), то с помощью бинарного журнала можно «доиграть» изменения, произошедшие после снятия копии, и восстановить состояние базы на нужный момент \autocite{Mysqldoc7}. Подобная техника реализует точечное восстановление (PITR) аналогично описанному для PostgreSQL: сначала из бэкапа восстанавливаются данные, затем прикладываются операции из binlog. Для этого используется утилита \texttt{mysqlbinlog}, которая позволяет фильтровать события журнала по времени или позициям и применить их к серверу. 
+ 
+ К примеру, если известно, что ошибочное удаление данных произошло примерно в 09:02, можно выполнить восстановление до 09:00 следующим образом:
 
+ \begin{lstlisting}[language=bash]
+    mysqlbinlog --start-datetime="2025-06-10 08:00:00" \
+                --stop-datetime="2025-06-10 09:00:00" \
+    /var/lib/mysql/binlog.000001 | mysql -u root -p
+ \end{lstlisting}
+ 
+ В приведённом примере утилита извлекает из файлов бинарного лога все транзакции с 8:00 до 9:00 и передаёт их серверу MySQL для выполнения – в результате база данных будет приведена в состояние на 9:00, т.е. непосредственно перед нежелательной операцией. Бинарный лог в MySQL включается опцией \texttt{--log-bin} (в современных версиях он часто включён по умолчанию). Следует отметить, что помимо binlog механизма MySQL (точнее, механизм хранения InnoDB) имеет и свой внутренний \textit{redo-лог} для целей crash-восстановления. Внутренний redo-лог используется при перезапуске сервера после сбоя, чтобы закончить незавершённые транзакции и откатить прерванные изменения – аналогично тому, как это делают другие СУБД. Однако этот внутренний лог недоступен для пользователя и не предназначен для архивации. Напротив, бинарный журнал MySQL предназначен именно для внешнего использования - с его помощью реализуются репликация и восстановление после аварий, и администратор может управлять сохранением binlog (например, настроить его периодическую очистку, сколько дней хранить журналы, или копировать их для архива). Включение binlog добавляет небольшие накладные расходы, несколько замедляя работу сервера, но это обычно оправдано с точки зрения возможности репликации и восстановления \autocite{Mysqldoc7}. 
+ 
+ Важно понимать, что binlog не защищает от всех видов сбоев. Например, если с диском произошла авария, из одного только журнала нельзя восстановить базу без резервной копии данных; а при логических ошибках (например, случайное \texttt{DROP TABLE}) журнал зафиксирует эту операцию и реплики её повторят. Поэтому binlog обычно используется в сочетании с регулярными резервными копиями и для репликации в режиме High Availability.
 
+ \paragraph{Транзакционный лог в SQL Server} ~\\
 
+ В Microsoft SQL Server для каждой базы данных определяется свой \textit{транзакционный журнал} (transaction log). Физически он хранится в отдельных файлах с расширением \texttt{.ldf}. В этот журнал последовательно записываются все изменения, происходящие в базе, включая операции вставки, обновления, удаления данных, а также изменения структуры (DDL) \autocite{MicrosoftLearnSQLserverTransLog}. Логические операции (например, выполнение SELECT) не журналируются, но любые изменения состояния базы (в том числе системных каталгов) фиксируются. 
+ 
+ Транзакционный лог SQL Server, как и WAL, обеспечивает надёжность: если сервер аварийно завершится, при следующем запуске он автоматически выполнит \textit{recovery} каждой базы данных, используя её журнал \autocite{MicrosoftLearnSQLserverTransLog}. В процессе автоматического восстановления SQL Server «прокручивает вперёд» (\textit{roll forward}) все изменения из лога, которые могли не сохраниться на диск к моменту сбоя, а также «откатывает» (\textit{roll back}) эффекты всех транзакций, которые не успели завершиться до сбоя \autocite{MicrosoftLearnSQLserverTransLog}. Благодаря этому достигается тот же эффект, как если бы незавершённые транзакции не выполнялись вовсе, а все подтверждённые – полностью сохранились. Кроме того, транзакционный лог позволяет выполнять откат индивидуальных транзакций по запросу пользователя (команда \texttt{ROLLBACK}) – СУБД читает из журнала ранее сохранённые «старые» значения и обращает изменения транзакции в обратном порядке \autocite{MicrosoftLearnSQLserverTransLog}. 
+ 
+ Также транзакционный лог в SQL Server используется как часть стратегии резервного копирования. Администратор может делать резервные копии самого журнала (\texttt{BACKUP LOG}) через определённые интервалы времени. Такие копии сохраняют все зафиксированные операции транзакций за период и позволяют при необходимости восстановить базу данных к произвольному моменту между полными резервными копиями. Например, после сбоя можно восстановить последовательно полный бэкап базы, дифференциальный бэкап (если использовался), а затем по порядку журнальные бэкапы – и тем самым «докрутить» базу до состояния непосредственно перед сбоем \autocite{MicrosoftLearnSQLserverTransLog}. SQL Server при применении каждого лога воспроизводит все записанные в нём изменения (REDO), а после применения последнего лога откатывает все незавершённые к тому моменту транзакции (UNDO), обеспечивая целостность \autocite{MicrosoftLearnSQLserverTransLog}. Таким образом реализуется точечное восстановление аналогично другим системам. 
+ 
+ Хранение журнала в SQL Server управляется \textit{моделями восстановления}: в режиме \texttt{FULL} или \texttt{BULK\_LOGGED} журнал сохраняет всю историю операций и требует регулярного архивирования (бэкапа) журнала, после каждого из которых пространство журнала может быть очищено (т.е. старые записи могут быть усечены). В упрощённом режиме \texttt{SIMPLE} журнал автоматически усекается системой после каждой контрольной точки, не накапливая полную историю транзакций – однако в этом режиме невозможно точечное восстановление, только откат ко времени последнего полного бэкапа. Администратор может принудительно выполнять команду \texttt{CHECKPOINT} (например, перед выключением сервера), чтобы сбросить на диск все изменения и облегчить последующее восстановление. Журнал также лежит в основе механизмов репликации и высокой доступности в экосистеме SQL Server. Так, при \textit{transactional replication} специальный процесс (\textit{Log Reader Agent}) читает транзакционный лог и вытаскивает из него подтверждённые транзакции, помеченные для репликации, копируя их в распределительную базу для рассылки подписчикам \autocite{MicrosoftLearnSQLserverTransLog}. 
+ 
+ Функции высокой готовности – такие как зеркалирование баз данных, \textit{AlwaysOn Availability Groups} и \textit{лог-шиппинг} – также полагаются на журнал: изменения из лога основного сервера отправляются на запасной сервер и там тоже записываются в журнал и применяются, что позволяет вторичной базе постоянно находиться на актуальном «прокрученном вперёд» состоянии \autocite{MicrosoftLearnSQLserverTransLog}.
 
-\subsection{Журналирование и резервное копирование (\textit{Coming soon})}
+ \paragraph{Redo-журнал в Oracle} ~\\
+ 
+ В Oracle механизм журналирования реализован через \textit{redo log} – набор как минимум из двух redo-файлов, которые используются по круговой схеме. Каждый экземпляр Oracle Database имеет свой набор redo log-файлов; при группировке в кластер (Real Application Clusters, RAC) у каждого узла свой «поток» журнала, чтобы избежать конкуренции за один файл \autocite{OracleRedoLog}. В обычной (standalone) конфигурации обычно имеется две группы журналов, каждая минимум с одним файлом, и они по очереди активны: когда текущий файл заполняется, происходит переключение лога (log switch) – Oracle начинает писать в следующий файл, а предыдущий помечается как неактуальный. Redo log хранит \textit{записи повторного выполнения} (\textit{redo records}), содержащие так называемые векторы изменений (change vectors) для отдельных блоков данных \autocite{OracleRedoLog}. Иначе говоря, каждая запись журнала Oracle описывает изменение, произошедшее с конкретным блоком базы данных. 
+ 
+ Например, если транзакция изменяет значение некоторой строки, в redo-запись войдут фрагменты: изменение в блоке данных таблицы, соответствующее изменение в блоке сегмента отката (undo) и обновление в блоке транзакционной таблицы (списка активных транзакций) \autocite{OracleRedoLog}. То есть журнал Oracle фиксирует все изменения, включая изменения в сегментах отката, и тем самым защищает также данные для отката транзакций.
+ 
+ Процесс записи журнала (\textit{Log Writer}, LGWR) работает подобно другим СУБД: при подтверждении транзакции LGWR сбрасывает из буфера SGA на диск все связанные с ней записи redo log и присваивает им \textit{SCN} (System Change Number – глобальный порядковый номер изменений) \autocite{OracleRedoLog}. Только после того, как все соответствующие журнальные записи надежно записаны на диск, транзакция считается зафиксированной. Если журнал заполняется до завершения транзакции (или другой транзакции), LGWR может сбросить и незавершённые на данный момент записи – это не проблема, поскольку при откате транзакции изменения, которые были записаны в журнал авансом, просто не будут применены либо будут компенсированы отдельными записями отката. При рестарте после сбоя Oracle выполняет \textit{автовосстановление экземпляра} (instance recovery): процесс \textit{SMON} читает текущий активный журнал и при необходимости архивированные журналы, чтобы повторно применить все изменения из redo log (ROLL FORWARD), завершив тем самым все транзакции, чьи коммиты подтверждены в журнале, и затем отменить (ROLL BACK) все транзакции, которые на момент сбоя не имели отметки о коммите \autocite{OracleRedoLog}. Эта процедура происходит автоматически при старте, позволяет базе данных восстановиться до консистентного состояния без вмешательства администратора.
 
-\textit{~Coming soon (WAL, PITR, репликация и тд)}
+ Особенностью Oracle является механизм архивирования журналов. По умолчанию база работает в режиме \texttt{NOARCHIVELOG} - при заполнении redo-файлы переиспользуются (перезаписываются) по кругу. Для возможности восстановления после более серьёзных сбоев (например, отказ диска) обычно включается режим \texttt{ARCHIVELOG} - тогда после каждого переключения журнала система фоновым процессом \textit{ARCH} сохраняет копию заполненного redo-файла в указанное хранилище (архивные логи). Накопленные архивные журналы вместе с резервной копией базы позволяют восстановить данные при повреждении диска: достаточно восстановить файлы данных из бэкапа и затем применить последовательно все архивные redo-логи, докручивая базу до актуального состояния или до требуемого пункта во времени. В Oracle для этого чаще всего используется утилита RMAN (Recovery Manager), либо команды SQL*Plus: \texttt{RECOVER DATABASE UNTIL TIME \ldots} и т.п. Redo-журналы также используются для организации репликации. 
+ 
+ Продукт Oracle Data Guard позволяет поддерживать синхронную или асинхронную реплику базы данных. Основной экземпляр в режиме реального времени отправляет свои redo-записи на удалённый резервный сервер, где эти изменения непрерывно применяются. При отказе основного узла резервный может мгновенно принять на себя работу с минимальной потерей данных (в случае синхронной репликации – с нулевой потерей). Аналогичные возможности, кстати, существуют и в других СУБД (например, синхронные реплики в SQL Server, режим \texttt{synchronous\_commit} в PostgreSQL и т.д.).
+ 
+ \begin{table}[H]
+    \centering
+    \begin{tabular}{|c|p{4.25cm}|p{7.75cm}|}
+        \hline
+        \textbf{СУБД} & \textbf{Механизм журнала} & \textbf{Назначение и применение} \\
+        \hline
+        PostgreSQL & Write-Ahead Log (WAL), «журнал предзаписи» & Запись физических изменений страниц базы перед фиксацией транзакции. Обеспечивает аварийное восстановление (REDO/UNDO при перезапуске), используется для онлайн-бэкапов и PITR (архивирование WAL) и для потоковой репликации на резервные узлы. \autocite{PostgreSQLdocc28} \\
+        \hline
+        MySQL & Binary Log (binlog), «бинарный журнал» & Запись логических событий изменений (SQL-команд или строковых изменений). Обеспечивает репликацию на уровне SQL/строк (передача событий репликам) и точечное восстановление после аварий (применение binlog к резервной копии). Не используется для автоматического crash-восстановления (эту функцию выполняет внутренний InnoDB redo log). \autocite{Mysqldoc7} \\
+        \hline
+        SQL Server & Transaction Log, «транзакционный журнал» & Запись всех операций изменения данных и схемы. Обеспечивает полноту ACID: при сбоях СУБД автоматически откатывает незавершённые транзакции и доделывает записанные. Поддерживает резервное копирование журнала и восстановление на время (RESTORE LOG ... STOPAT). Используется для механизмов высокой доступности (AlwaysOn, зеркалирование, лог-шиппинг) и транзакционной репликации. \autocite{MicrosoftLearnSQLserverTransLog} \\
+        \hline
+        Oracle & Redo Log, «журнал повторных изменений» & Запись низкоуровневых изменений во всех блоках данных базы. Обеспечивает надёжность транзакций; при сбоях Oracle выполняет автоматический \textit{roll-forward} всех изменений из журнала и откат незавершённых. Имеет несколько групп файлов в круговом использовании; в режиме ARCHIVELOG сохраняется для восстановления базы из бэкапов до любого времени. Используется для репликации Data Guard (передача redo на резервный standby). \autocite{OracleRedoLog} \\
+        \hline
+    \end{tabular}
+    \caption{Механизмы транзакционного журналирования в разных СУБД}
+    \label{tab:txn_logging_mechanisms}
+\end{table}
 
+\subsubsection{Операции восстановления: прокрутка вперёд и откат} 
+ 
+ Механизм журналирования позволяет СУБД выполнять \textit{восстановление} базы данных после сбоев, выполняя две основные процедуры: \textit{повторение подтверждённых операций} и \textit{отмену незафиксированных изменений}. В теории восстановления эти две процедуры называются \textbf{REDO} (повторное применение или «прокрутка вперёд») и \textbf{UNDO} (отмена или «откат назад») \autocite{ElmasriNavathe}. При сбое системы (например, внезапном выключении питания) в журнале могут остаться записи операций, которые ещё не были применены к основным файлам базы, а также могут присутствовать незавершённые транзакции. При перезапуске СУБД просматривает журнал и выполняет восстановление в два этапа. Сначала производится REDO всех операций, которые были зафиксированы (commit) до момента сбоя, но чьи результаты не успели записаться в базу данных \autocite{ElmasriNavathe}. По журнальным записям система повторяет эти изменения, чтобы довести базу до состояния, в котором находятся все завершённые транзакции. После этого выполняется UNDO для всех транзакций, которые были активны на момент сбоя (т.е. не успели подтвердиться) \autocite{ElmasriNavathe}. Используя журнальные записи старых значений (так называемые \textit{undo-лог}), система отменяет все частичные эффекты этих прерванных транзакций, возвращая базу к консистентному состоянию, как если бы незавершённые транзакции не выполнялись вовсе. Такой алгоритм восстановления (REDO потом UNDO) реализован, например, в методике ARIES, используемой во многих СУБД \autocite{Silberschatz}. В некоторых реализациях порядок может быть обратным (сначала UNDO незавершённых, затем REDO завершённых), но конечный результат одинаков. 
+ 
+ Рассмотрим простой пример для иллюстрации. Пусть транзакция переноса денег списывает \textdollar 100 со счёта A и зачисляет их на счёт B. Предположим, операция со счёта A прошла, а операция на счёт B ещё не записана, когда произошёл сбой. В журнале будет запись об успешном вычитании \textdollar 100 с A, но транзакция не зафиксирована. При восстановлении система обнаружит незавершённую транзакцию и выполнит откат: по undo-записи вернёт \textdollar 100 обратно на счёт A. Таким образом, частично выполненная транзакция не повлияет на состояние базы. Если же, наоборот, транзакция успела подтвердиться, но деньги на счёт B ещё не записались на диск, то при перезапуске механизм REDO найдёт в журнале запись о зачислении \textdollar 100 на B и повторит её, доведя операцию до завершения. В обоих случаях целостность данных будет сохранена благодаря журналу. 
+ 
+ Важно отметить, что операции REDO и UNDO применяются не только при полном сбое системы, но и в других ситуациях. Например, если пользователь или приложение выполняет откат транзакции (\texttt{ROLLBACK}), СУБД читает журнал и делает UNDO для всех изменений данной транзакции, восстанавливая исходные значения тех данных, которые она изменила \autocite{MicrosoftLearnSQLserverTransLog}. Аналогично, при восстановлении базы из резервной копии на точный момент времени (PITR) применяется операция REDO для всех журналов от момента бэкапа до целевого времени, после чего могут быть отменены транзакции, выходящие за предел нужного момента.
 
+\subsubsection{Контрольные точки} 
+ При непрерывном журналировании объем журнала со временем растёт, а для восстановления теоретически понадобилось бы просканировать весь журнал с начала времён. Чтобы ограничить длину цепочки восстановления и избежать избыточного накопления журналов, СУБД используют механизм \textit{контрольных точек} (\textit{checkpoint}). 
+ \begin{grayquote}
+    \textbf{Контрольная точка} – это специальная точка во времени, когда система фиксирует, что база данных приведена в консистентное состояние на диске, согласованное с определённой pozицией журнала. 
+ \end{grayquote}
+ Иными словами, во время контрольной точки СУБД выполняет синхронизацию основных данных с журналом. 
+ 
+ Создание контрольной точки обычно включает следующие шаги \autocite{ElmasriNavathe}: 
+ \begin{enumerate}
+    \item Приостановка поступления новых транзакций (очень кратко или логически, как в \textit{fuzzy checkpoint})
+    \item Принудительная запись на диск всех изменённых буферов страниц (\textit{flush dirty pages}), чтобы все изменения, выполненные до этого момента, действительно оказались в файлах данных
+    \item Запись специальной отметки – записи контрольной точки – в журнал транзакций и сброс этой записи на диск
+ \end{enumerate}
+ 
+ В журнале контрольная точка обычно содержит идентификатор текущей позиции (LSN, log sequence number) и список активных транзакций на данный момент. После этого выполнение транзакций возобновляется (если оно приостанавливалось). Контрольная точка устанавливает границу, до которой все предыдущие журнальные записи уже не нужны для восстановления полного состояния базы, так как все изменения до этой границы уже присутствуют в данных на диске \autocite{ElmasriNavathe}. 
+ 
+ При аварийном восстановлении СУБД может начать процедуру REDO не с самого начала лога, а с последней контрольной точки. Например, Oracle и SQL Server при старте читают журнал от последней отметки \texttt{checkpoint} и восстанавливают изменения начиная с неё, что значительно ускоряет recovery. Журнальные записи, предшествующие самой последней контрольной точке, обычно не нужны для восстановления после сбоя и могут быть отброшены или архивированы. Более того, многие системы освобождают пространство журнала (транкуют лог) именно до последней контрольной точки, тем самым ограничивая рост файла журнала. 
+ \begin{itemize}
+    \item В PostgreSQL контрольная точка происходит автоматически по наступлении одного из условий: либо проходит определённый интервал времени (параметр \texttt{checkpoint\_timeout}, по умолчанию 5 минут), либо журнал WAL вырастает на заданный объем, либо по команде пользователя (\texttt{CHECKPOINT}). При контрольной точке PostgreSQL записывает в журнал специальную запись \texttt{CHECKPOINT} с номером последнего WAL-сегмента и обеспечивает сброс всех грязных страниц на диск. 
+    \item В MySQL (InnoDB) контрольные точки выполняются непрерывно в фоновом режиме (так называемый \textit{fuzzy checkpoint}), записывая изменённые страницы, чтобы удерживать объем внутреннего буфера изменений. 
+    \item SQL Server самостоятельно выполняет checkpoint примерно каждые несколько минут (в зависимости от нагрузки, параметра \texttt{recovery interval} или по явной команде), отмечая его в своём журнале. 
+    \item Oracle осуществляет контрольную точку при каждом переключении redo log-файлов, а также периодически по таймеру; при этом процесс \textit{CKPT} обновляет заголовки файлов данных и контрольного файла, фиксируя, до какого SCN данные актуальны на диске. 
+ \end{itemize}
 
-\subsection{OLD. События.}
+ Контрольные точки позволяют существенно сократить время восстановления и объем обрабатываемых журнальных данных. Например, если база работала месяц без перерыва, но контрольные точки происходили каждые несколько минут, то в случае сбоя для восстановления понадобится применить лишь последние несколько минут журнала, а не весь месяц операций. Кроме того, контрольные точки косвенно ограничивают размер активного журнала: после успешного создания новой контрольной точки предыдущие журналы могут быть помечены как не нужные для аварийного восстановления. Однако следует учитывать, что во время контрольной точки система вынуждена интенсивно работать с диском (сбрасывать страницы), что может временно снизить производительность. Современные СУБД используют оптимизированные или «размытые» (\textit{fuzzy}) контрольные точки, при которых транзакции не блокируются на всё время записи на диск: запись контрольной точки в журнал делается сразу, после чего новые транзакции могут продолжаться, пока остальные страницы дописываются в фоновом режиме \autocite{ElmasriNavathe}. Таким образом достигается баланс между скоростью работы в обычном режиме и скоростью восстановления после сбоя.
 
-\paragraph{Назначение механизма событий} ~\\
+\subsubsection{Резервное копирование и репликация} 
 
-Механизм событий в базе данных (database events) позволяет прикладным программам и серверу базы данных уведомлять другие программы о наступлении в базе данных определенного события и тем самым синхронизировать их работу \autocite{OSP}.
-
-\paragraph{Сигнализаторы событий. Типы уведомлений о происхождении события. Компоненты механизма событий.} ~\\
-
-Операторы языка SQL, обеспечивающие уведомление, часто называют сигнализаторами событий в базе данных (database event alerters). Функции управления событиями целиком ложатся на сервер базы данных.
-
-
-Механизм событий используется следующим образом. Вначале в базе данных для каждого события создается флажок, состояние которого будет оповещать прикладные программы о том, что некоторое событие имело место (оператор CREATE DBEVENT - СОЗДАТЬ СОБЫТИЕ). Далее во все прикладные программы, на ход выполнения которых может повлиять это событие, включается оператор REGISTER DBEVENT (ЗАРЕГИСТРИРОВАТЬ СОБЫТИЕ), который оповещает сервер базы данных, что данная программа заинтересована в получении сообщения о наступлении события. Теперь любая прикладная программа или процедура базы данных может вызвать событие оператором RAISE DBEVENT (ВЫЗВАТЬ СОБЫТИЕ). Как только событие произошло, каждая зарегистрированная программа может получить его, для чего должна запросить очередное сообщение из очереди событий (оператор GET DBEVENT - ПОЛУЧИТЬ СОБЫТИЕ) и запросить информацию о событии, в частности, его имя (оператор SQL INQUIRE\_SQL) \autocite{OSP}.
+ Помимо журнала транзакций, важнейшим элементом системы защиты данных является регулярное резервное копирование базы данных. Резервные копии (\textit{backups}) позволяют восстановить базу в случае серьёзных сбоев, например отказа диска или удаления данных пользователем. Существует несколько типов резервного копирования: \textit{полное} (сохранение всей базы целиком), \textit{дифференциальное} (сохранение изменений с момента последнего полного бэкапа) и \textit{инкрементальное} (сохранение изменений с момента предыдущего бэкапа любого типа). Также различают \textit{физическое} копирование файлов базы данных и \textit{логическое} копирование (дамп структур и данных в виде SQL-скриптов, например через утилиту \texttt{mysqldump} или \texttt{pg\_dump}). Выбор стратегии зависит от требований к времени восстановления и доступных ресурсов хранилища. 
+ 
+ Одной из продвинутых возможностей, поддерживаемых журналированием, является \textbf{точечное восстановление} (Point-in-Time Recovery, PITR) – восстановление базы данных на произвольный момент времени в прошлом. Как обсуждалось ранее, PITR достигается комбинированием резервной копии и журнала транзакций. Сначала производится восстановление базы из последнего имеющегося бэкапа (это откатывает состояние базы к тому моменту, когда делалась копия). Затем применяются журнальные записи (WAL, binlog, архивные redo и т.п.), чтобы «докрутить» базу до желаемого состояния. При этом можно остановить проигрывание журнала в нужной точке – например, непосредственно перед выполнением ошибочной операции. Благодаря PITR администратор может, к примеру, вернуть базу к состоянию на вчерашний вечер или на любое время до момента ухудшающих изменений. Все четыре рассматриваемые СУБД поддерживают механизмы PITR. В PostgreSQL для этого необходимо включенное WAL-архивирование: указав параметр \texttt{recovery\_target\_time} или \texttt{recovery\_target\_xid} и располагая непрерывной последовательностью WAL-файлов, можно откатить базу ко времени T. В MySQL точечное восстановление осуществляется применением бинарного лога, как показано выше (можно указать диапазон времени или конкретные позиции журнала для восстановления \autocite{Mysqldoc7}). В SQL Server PITR возможен при условии режима полного восстановления: при восстановлении базы командой \texttt{RESTORE DATABASE \ldots WITH NORECOVERY} затем выполняются \texttt{RESTORE LOG} для всех журнальных бэкапов по порядку, с опцией \texttt{STOPAT ='T'}, где \texttt{T} – требуемое время \autocite{MicrosoftLearnSQLserverTransLog}. После применения последнего лога выполняется \texttt{RESTORE \ldots WITH RECOVERY} для завершения процесса. В Oracle точечное восстановление обычно производится через RMAN, командой \texttt{RECOVER DATABASE UNTIL TIME 'T'} с указанием времени или SCN. Таким образом, наличие полных резервных копий и архивированных журналов транзакций даёт большую гибкость в откате базы данных к прошлому состоянию, что важно при логических ошибках (например, случайное удаление данных) или обнаружении коррупции данных. 
+ 
+ Стоит отдельно обсудить роль репликации в обеспечении отказоустойчивости. 
+ \begin{grayquote}
+    \textbf{Репликация} – это поддержание актуальных копий базы данных на нескольких узлах (серверах). 
+ \end{grayquote}
+ 
+ Обычно репликация настраивается для повышения доступности. То есть если основной сервер выходит из строя, на его место быстро переключается один из реплика-серверов, обладающий почти идентичными данными. Репликация может быть \textit{синхронной} (когда транзакция считается завершённой только после применения на резервном узле, что минимизирует потерю данных при сбое, но замедляет работу) или \textit{асинхронной} (основной сервер не ждёт подтверждения от реплики, данные доходят с небольшой задержкой). Механизмы репликации тесно связаны с журналированием - как уже упоминалось, изменения чаще всего передаются на реплики именно через журнал транзакций. Например, MySQL отправляет события из бинарного лога на реплики, PostgreSQL передаёт свой WAL на standby-серверы, SQL Server в режимах высокой доступности пересылает записи своего лога на вторичные реплики, Oracle Data Guard передаёт redo-записи на standby-базу \autocites{Mysqldoc7}{MicrosoftLearnSQLserverTransLog}. То есть по сути, транзакционный журнал служит «транспортом» изменений для репликации. 
+ 
+ Репликация существенно повышает отказоустойчивость системы. При выходе из строя одного узла клиенты могут переключиться на другой узел с актуальными данными, почти не прерывая работу приложения. Однако репликация \textit{не заменяет} собой резервное копирование. Если данные на основном сервере были повреждены или ошибочно изменены (например, выполнено ошибочное удаление таблицы), то эти изменения обычно мгновенно реплицируются на все узлы и резервные копии базы таким способом не сохраняются \autocite{mariaBackup}. Как отмечается в документации MariaDB, репликация сама по себе не обеспечивает защиту от логических ошибок или потери данных – она лишь защищает от отказа оборудования основного сервера, но не избавляет от необходимости иметь резервные копии \autocite{mariaBackup}. Поэтому на практике стратегия обеспечения надёжности включает обе технологии: и репликацию (для высокой доступности в режиме реального времени), и регулярное резервное копирование (для возможности восстановить данные при повреждениях или откатиться к прошлым версиям данных). Комбинация правильно настроенного журналирования, репликации и бэкапов позволяет достичь в целом и устойчивости к сбоям аппаратуры, и защиты от потери данных, обеспечивает целостность и непрерывность работы базы данных даже.
